<resources>
    <string name="app_name">Fresh Avocados</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="new_password">New Password</string>
    <string name="showusername">showUsername</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_view_profile">ViewProfileActivity</string>
    <string name="create_profile">Create Profile</string>
    <string name="email_address">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="view_profile">View Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_confirm_password">ConfirmPassword</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_new_password">NewPasswordActivity</string>
    <string name="Bio">Bio</string>
    <string name="theirbio">their bio</string>
    <string name="update">Update</string>
    <string name="theirmajor">their major</string>
    <string name="major">Major</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="show_first_name">showfirstname</string>
    <string name="show_last_name">showlastname</string>
    <string name="show_email_address">showemailaddress</string>
    <string name="show_major">showmajor</string>
    <string name="show_bio">showbio</string>
    <string name="title_activity_display_movie_list">DisplayMovieListActivity</string>
    <string name="spinner_title">Major</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_individual_user">IndividualUserActivity</string>
    <string name="username_here">  Username here</string>
    <string name="moviename_here">Movie Name Here</string>
    <string name="placeholder_title">Placeholder Title</string>
    <string name="admin_page">Admin Page</string>
    <string name="reviewer">Reviewer</string>
    <string name="banned">Banned</string>
    <string name="add_a_review">Add a Review!</string>
    <string name="movie_title_year">Movie Title (Year)</string>
    <string name="search">Search</string>
    <string name="locked">Locked</string>
    <string name="actors">Actor 1, Actor 2</string>
    <string name="review_text">Review Text</string>
    <string name="generate">Generate</string>
    <string name="short_synop">This is a short synopsis of the movie</string>
    <string name="type_review_here">Type review here!</string>
    <string name="back">Back</string>
    <string name="top_rentals">Top Rentals</string>
    <string name="app_descrip">A Movie Recommendation App</string>
    <string name="submit_review">Submit Review</string>
    <string name="new_to_theaters">New to Theatres</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="new_dvd">New to DVD</string>
    <string name="add_review">Add Review</string>
    <string name="recommend_major">Recommended by Major</string>
    <string name="reviews">Reviews</string>
    <string name="recommend_all">Recommended by All</string>
    <string name="or">Or...</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="show_reviews">Show Reviews</string>
    <string name="logo">Our Logo</string>
    <string name="thumbnail">Movie Thumbnail</string>


</resources>
