<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cs2340.officehours.freshavocados.controller.EditProfileActivity">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:id="@+id/imageView4"
        android:src="@drawable/avocado_logo"
        android:clickable="true"
        android:baselineAlignBottom="false"
        android:adjustViewBounds="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_profile"
        android:id="@+id/updateProfile"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:layout_marginTop="48dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/majorEdit"
        android:layout_marginTop="55dp"
        android:inputType="text"
        android:text="@string/theirmajor"
        android:layout_below="@+id/updateProfile"
        android:layout_centerHorizontal="true"
        android:hint="@string/major" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/updateButton"
        android:text="@string/update"
        android:clickable="true"
        android:onClick="onClickUpdate"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelButton"
        android:text="@string/cancel"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickCancelEditProfile"
        android:enabled="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bioEdit"
        android:ems="10"
        android:hint="@string/Bio"
        android:enabled="true"
        android:inputType="text"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/majorEdit"
        android:text="@string/theirbio"
        android:layout_below="@+id/majorEdit"
        android:maxLines="4" />
</RelativeLayout>
