<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cs2340.officehours.freshavocados.controller.IndividualMovieActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/movie_img"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:minHeight="100dp"
        android:minWidth="100dp"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:contentDescription="@string/thumbnail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/movie_title_year"
        android:id="@+id/movie_title_year"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/movie_img"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/actors"
        android:id="@+id/actor_actor"
        android:layout_toEndOf="@+id/movie_img"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/movie_title_year" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/short_synop"
        android:id="@+id/short_synop"
        android:layout_below="@+id/movie_img"
        android:layout_centerHorizontal="true"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:maxLines="3" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/short_synop"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="60dp"
        android:id="@+id/linearLayout">


        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/review_list"
            android:layout_marginTop="40dp">


        </ListView>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:enabled="true"
        android:clickable="true"
        android:onClick="onClickBack" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_review"
        android:id="@+id/add_review"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:nestedScrollingEnabled="false"
        android:onClick="onClickAddReview" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/reviews"
        android:id="@+id/review_header"
        android:textStyle="bold|italic"
        android:textSize="25sp"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_toStartOf="@+id/actor_actor" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/overallRating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_gravity="center_horizontal"
        android:layout_toEndOf="@+id/textView4"
        android:stepSize=".1"
        android:isIndicator="true"
        android:layout_alignBottom="@+id/textView4"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/overall_rating"
        android:id="@+id/textView4"
        android:textStyle="bold|italic"
        android:textSize="25sp"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_alignStart="@+id/actor_actor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_reviews"
        android:id="@+id/generateReviewlist"
        android:nestedScrollingEnabled="false"
        android:onClick="onClickGenerateReviewList"
        android:layout_alignTop="@+id/back"
        android:layout_toEndOf="@+id/review_header" />

</RelativeLayout>
