<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cs2340.officehours.freshavocados.controller.IndividualUserActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/username_here"
        android:id="@+id/username_display"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banned"
        android:id="@+id/isBannedCheck"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/username_display"
        android:layout_alignParentStart="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="40dp"
        android:textSize="20sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locked"
        android:id="@+id/isLockedCheck"
        android:layout_alignTop="@+id/isBannedCheck"
        android:layout_toEndOf="@+id/isBannedCheck"
        android:textSize="20sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/isBannedCheck"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="40dp"
        android:weightSum="1">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/listViewUserReviews"
            android:layout_marginBottom="40dp"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickBackAdmin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_changes"
        android:id="@+id/submitAdminChanges"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClickSubmitChanges" />

</RelativeLayout>
