<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cs2340.officehours.freshavocados.controller.DisplayMovieListActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_title"
        android:id="@+id/pageTitle"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_view"
        android:layout_below="@+id/pageTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:footerDividersEnabled="false"
        android:textAlignment="center"
        android:layout_marginBottom="55dp">
    </ListView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:layout_alignParentTop="true"
        android:src="@drawable/avocado_logo"
        android:maxWidth="50dp"
        android:minHeight="50dp"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/list_view"
        android:layout_toEndOf="@+id/pageTitle"
        android:minWidth="50dp"
        android:maxHeight="50dp"
        android:contentDescription="@string/logo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/back_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickBackButton"
        android:enabled="true"
        android:clickable="true" />

</RelativeLayout>
