<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".controller.ViewProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/username"
        android:id="@+id/viewProfileUsername"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/viewProfileShowUsername"
        android:text="@string/showusername"
        android:layout_below="@+id/imageView2"
        android:layout_alignStart="@+id/viewProfileShowEmailAddress" />

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:id="@+id/imageView2"
        android:src="@drawable/avocado_logo"
        android:clickable="true"
        android:baselineAlignBottom="false"
        android:adjustViewBounds="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/first_name"
        android:id="@+id/viewProfileFirstName"
        android:layout_below="@+id/viewProfileUsername"
        android:layout_alignParentStart="false"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/viewProfileShowFirstName"
        android:text="showfirstname"
        android:layout_alignTop="@+id/viewProfileFirstName"
        android:layout_alignStart="@+id/viewProfileShowUsername" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/last_name"
        android:id="@+id/viewProfileLastName"
        android:layout_below="@+id/viewProfileFirstName"
        android:layout_alignParentStart="false"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/viewProfileShowLastName"
        android:text="showlastname"
        android:layout_alignTop="@+id/viewProfileLastName"
        android:layout_alignStart="@+id/viewProfileShowFirstName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email_address"
        android:id="@+id/viewProfileEmailAddress"
        android:layout_alignParentStart="false"
        android:layout_marginTop="20dp"
        android:layout_alignBottom="@+id/viewProfileShowEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/viewProfileShowEmailAddress"
        android:text="showemailaddress"
        android:layout_below="@+id/viewProfileShowLastName"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancelViewProfileButton"
        android:onClick="onClickCancelViewProfile"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:id="@+id/editProfileButton"
        android:onClick="onClickConfirmPassword"
        android:enabled="true"
        android:clickable="true"
        android:layout_above="@+id/changePassButton"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Major"
        android:id="@+id/viewProfileMajor"
        android:layout_below="@+id/viewProfileEmailAddress"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="showmajor"
        android:id="@+id/viewProfileShowMajor"
        android:layout_below="@+id/viewProfileShowEmailAddress"
        android:layout_alignStart="@+id/viewProfileShowEmailAddress"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="showbio"
        android:id="@+id/viewProfileShowBio"
        android:layout_below="@+id/viewProfileShowMajor"
        android:layout_toEndOf="@+id/viewProfileMajor"
        android:layout_marginTop="58dp"
        android:layout_marginLeft="80dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Bio"
        android:id="@+id/viewProfileBio"
        android:layout_below="@+id/viewProfileMajor"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Password"
        android:id="@+id/changePassButton"
        android:enabled="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
